--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "booksearch",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://appbaseio-apps.github.io/booksearch",
+  "homepage": "http://localhost:3000/",
   "devDependencies": {
     "gh-pages": "^1.1.0",
     "react-scripts": "^1.0.17"
